# learn_rust2

./: .gitignore
adder/: Cargo.toml
adder/src/: guess.rs  lib.rs  rectangle.rs
adder/tests/: integration_test.rs
async-chat/: Cargo.toml
async-chat/src/: lib.rs  utils.rs
chapter_10_generics/: Cargo.toml
chapter_10_generics/src/: generic_types.rs  lifetimes.rs  main.rs  traits.rs
chapter_11_tests/: Cargo.toml
chapter_11_tests/src/: main.rs
chapter_12_io_project/: Cargo.toml
chapter_12_io_project/src/: config.rs  lib.rs  main.rs
chapter_13_iterators_closures/: Cargo.toml
chapter_13_iterators_closures/src/: closures.rs  iterators.rs  main.rs
chapter_15_smart_pointers/: Cargo.toml
chapter_15_smart_pointers/src/: boxing.rs  lib.rs  main.rs  memory_leaks.rs  ref_cell_example.rs  reference_counter.rs  tree_example.rs
chapter_16_fearless_concurrency/: Cargo.toml
chapter_16_fearless_concurrency/src/: channels_example.rs  main.rs  merge_sort.rs  petr_threads.rs  shared_state.rs  threads_example.rs
chapter_17_oop/: Cargo.toml
chapter_1_getting_started/: Cargo.toml
chapter_2_guessing_game/: Cargo.toml
chapter_2_guessing_game/src/: main.rs
chapter_3_common/: Cargo.toml
chapter_3_common/src/: control_flow.rs  data_types.rs  functions.rs  main.rs  (+1 more)
chapter_4_ownership/: Cargo.toml
chapter_5_structs/: Cargo.toml
chapter_6_enums/: Cargo.toml
chapter_7_modules/: Cargo.toml
chapter_8_collections/: Cargo.toml
chapter_9_error_handling/: Cargo.toml
concurrency/: Cargo.toml
data_structures/: Cargo.toml
projecteuler/: Cargo.toml
(+31 files in other folders)
