[package]
name = "async-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0" }
futures-lite = "1.13.0"
tokio = { version = "1.27.0", features = ["sync"]}
serde = { version = "1.0.159", features = ["derive","rc"] }
serde_json = "1.0.95"
